--- a/playbooks/vars/agent_deploy_vars.yaml
+++ b/playbooks/vars/agent_deploy_vars.yaml
@@ -33,4 +33,4 @@ advertised_tunnel_types: vxlan
 agent_service_name: f5-openstack-agent
 
 # Remote user
-remote_user: testlab  # User ansible will use to issue commands
+remote_user: ubuntu  # User ansible will use to issue commands
