WIP: getting ansible to work for testenv

--- a/playbooks/roles/install_lbaasv2_agent/tasks/main.yml
+++ b/playbooks/roles/install_lbaasv2_agent/tasks/main.yml
@@ -28,5 +28,5 @@
   pip:
     name: '{{ agent_pkg_location }}'
     editable: false
-    extra_args: --upgrade
+    extra_args: '--install-option="--prefix={{ pip_install_dest }}"'
   when: use_pip|bool and pip_upgrade|bool
